added user name in comments

--- a/index.html
+++ b/index.html
@@ -216,6 +216,7 @@
       </div>
 
       <div class="commentsComposer">
+        <input id="commentUserInput" type="text" placeholder="Nombre" maxlength="30">
         <textarea id="commentInput" rows="3" placeholder="Escribe un comentario…"></textarea>
         <button id="addCommentBtn" class="secondary">➕ Añadir</button>
       </div>
