--- a/index.html
+++ b/index.html
@@ -154,8 +154,8 @@
   <div id="statusText">Cargando…</div>
   <!-- Tabla -->
   <div class="tableFullBleed">
-    <div class="tableWrap noScroll">
-    <table class="resultsTable">
+    <div class="tableScrollX">
+      <table class="resultsTable">
     <thead>
       <tr>
         <th data-sort="name">Estación</th>
@@ -176,6 +176,7 @@
     <tbody id="resultsTbody"></tbody>
   </table>
 </div>
+<div class="scrollHint">← Desliza →</div>
 </div>
 
 <footer>
