--- a/index.html
+++ b/index.html
@@ -275,7 +275,8 @@
             <th>Día</th>
             <th class="right">Cheapest medio</th>
             <th class="right">Top10 Avg medio</th>
-            <th class="right">% baja vs día anterior</th>
+            <th class="right">Prob. bajar</th>
+            <th class="right">% bajada media</th>
             <th class="right">Cambio medio (abs)</th>
             <th class="right">Muestras</th>
           </tr>
