--- a/index.html
+++ b/index.html
@@ -268,7 +268,8 @@
       <div class="muted" id="priceInsightsMeta"></div>
   
       <div class="summaryBar" id="priceInsightsChips"></div>
-  
+      <div class="rankings" id="priceInsightsRankings"></div>
+
       <table>
         <thead>
           <tr>
@@ -276,8 +277,8 @@
             <th class="right">Cheapest medio</th>
             <th class="right">Top10 Avg medio</th>
             <th class="right">Prob. bajar</th>
-            <th class="right">% bajada media</th>
-            <th class="right">Cambio medio (abs)</th>
+            <th class="right">Bajada media</th>
+            <th class="right">Volatilidad</th>
             <th class="right">Muestras</th>
           </tr>
         </thead>
